Bug 1893376 - have XPCOM GetAccessibleFor return GetAccessibleEvenIfNotInMap when getting an Accessible for a DOM node; r=Jamie

This allows tests to get an Accessible for an HTML area element, since area elements are special and are not in the DocAccessible node map.

Differential Revision: https://phabricator.services.mozilla.com/D209614